--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.application.name=rest-service
 
 person.id=1
 person.name=John
-person.word=hello world
+
+// DEMO: ??????
+person.wORd=hello world
+
