feat: 🎸 add jpa and entity sample

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,14 @@
 spring.application.name=rest-service
 server.port=8081
 
-person.id=13
-person.name=Arthur
-
 person.wORd=hello world2
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
